# TaskIt

./: .gitignore  CMakeLists.txt
docs/: Architecture.md
src/cli/: CMakeLists.txt  main.cpp  parse_input.cpp
src/core/: CMakeLists.txt  parse_input.cpp  parse_input.h  task.cpp  task.h  task_manager.cpp  task_manager.h
src/gui/: CMakeLists.txt  GUIElements.cpp  GUIElements.h  MainWindow.cpp  MainWindow.h  main.cpp
tests/: CMakeLists.txt  test_core.cpp
